# the-button

./: .gitignore  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml
backend/clicks.db/: IDENTITY  LOG  LOG.old.1685926856530449
backend/src/: main.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: main.rs  model.rs
frontend/src/components/: app.rs  button.rs  mod.rs  timer.rs
frontend/src/components/stats/: generic.rs  highscore.rs  mod.rs  time.rs
