[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
itertools = "0.10.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["protocol-http"] }
