[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Melody Henrich"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
gloo-timers = "0.2.6"
reqwest = { version = "0.11.18", features = ["serde_json"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
yew = { version = "0.20.0", features = ["csr"] }
